--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
   },
   "homepage": "http://nohsunghyung.github.io/react-portfolio",
   "devDependencies": {
-    "gh-pages": "^3.2.3"
+    "gh-pages": "^3.2.3",
+    "node-sass": "^6.0.1",
+    "sass-loader": "^12.1.0"
   }
 }
